--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,9 @@ RewriteEngine on
 # Definición de la regla para vistas amigables.
 # Se usa la variable vista_solicitada para almacenar la URL.
 RewriteRule ^([a-zA-Z0-9/_-]+)$ index.php?vista_solicitada=$1
+
+<IfModule mod_headers.c>
+    <FilesMatch "\.(eot|ttf|otf|woff|woff2)$">
+        Header set Access-Control-Allow-Origin "*"
+    </FilesMatch>
+</IfModule>
